Step 7 is implemented