@@ -1,17 +1,28 @@
 package hexlet.code.controller;
 
+import hexlet.code.db.dao.UrlCheckDao;
+import hexlet.code.db.dao.UrlDao;
 import hexlet.code.entity.Url;
-import io.ebean.DB;
+import hexlet.code.entity.UrlCheck;
 import io.ebean.PagedList;
 import io.javalin.http.Context;
 import io.javalin.http.Handler;
 import io.javalin.http.HttpStatus;
 import io.javalin.http.NotFoundResponse;
+import kong.unirest.HttpResponse;
+import kong.unirest.Unirest;
+import kong.unirest.UnirestException;
 import lombok.extern.slf4j.Slf4j;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.IntStream;
 
 @Slf4j
@@ -21,93 +32,75 @@ public class UrlController {
         public static final int ROWS_PER_PAGE = 10;
 
         public static final Handler HANDLER = ctx -> {
-            log.info("ListShowEndpoint int");
             int page = ctx.queryParamAsClass("page", Integer.class).getOrDefault(1) - 1;
+            log.debug("int page: %d.".formatted(page));
 
-            PagedList<Url> pagedUrls = getUrlPagedList(page, ROWS_PER_PAGE);
+            PagedList<Url> pagedUrls = UrlDao.getUrlPagedList(page, ROWS_PER_PAGE);
             List<Url> urls = pagedUrls.getList();
+            log.debug("List<Url> urls: %s.".formatted(pagedUrls));
             configurePages(ctx, pagedUrls);
-
+            Map<Long, UrlCheck> urlChecks = UrlCheckDao.getUrlChecksMap();
             ctx.attribute("urls", urls);
+            ctx.attribute("urlChecks", urlChecks);
             ctx.render("list.html");
-            log.info("ListShowEndpoint out");
         };
 
         private static void configurePages(Context ctx, PagedList<Url> pagedUrls) {
-            log.info("configurePages in");
             int lastPage = pagedUrls.getTotalPageCount() + 1;
             int currentPage = pagedUrls.getPageIndex() + 1;
             List<Integer> pages = IntStream
                     .range(1, lastPage)
                     .boxed()
                     .toList();
+            log.debug("lastPage: %d, currentPage: %d, List<Integer> pages: %s."
+                    .formatted(lastPage, currentPage, pages));
             ctx.attribute("pages", pages);
             ctx.attribute("currentPage", currentPage);
-            log.info("configurePages out");
-        }
-
-        private static PagedList<Url> getUrlPagedList(int page, int rowsPerPage) {
-            log.info("configurePages in");
-            return DB.getDefault()
-                    .find(Url.class)
-                    .setFirstRow(page * rowsPerPage)
-                    .setMaxRows(rowsPerPage)
-                    .orderBy("id ASC")
-                    .findPagedList();
         }
     }
 
     public static class CreateEndpoint {
         public static final Handler HANDLER = ctx -> {
-            log.info("CreateEndpoint in");
             String urlInput = ctx.formParam("url");
+            log.debug("String urlInput: %s.".formatted(urlInput));
             URL url = parseUrl(ctx, urlInput);
+            log.debug("Url url: %s.".formatted(url));
             if (url == null) {
                 return;
             }
             String normalizedUrl = getNormalizedUrl(url);
+            log.debug("String normalizedUrl: %s.".formatted(normalizedUrl));
             if (isUrlAlreadyExists(ctx, normalizedUrl)) {
                 return;
             }
             createUrl(ctx, normalizedUrl);
-            log.info("CreateEndpoint out");
         };
 
         private static void createUrl(Context ctx, String normalizedUrl) {
-            log.info("createUrl in");
-            Url newUrl = new Url();
-            newUrl.setName(normalizedUrl);
-            DB.getDefault().save(newUrl);
+            Url url = UrlDao.createUrl(normalizedUrl);
+            log.debug("Url saved: %s.".formatted(url));
             ctx.sessionAttribute("flash", "Страница успешно добавлена");
             ctx.sessionAttribute("flash-type", "success");
             ctx.redirect("/urls");
-            log.info("createUrl out");
         }
 
         private static boolean isUrlAlreadyExists(Context ctx, String normalizedUrl) {
-            log.info("isUrlAlreadyExists in");
-            Url url = DB.getDefault()
-                    .find(Url.class)
-                    .select("name")
-                    .where()
-                    .eq("name", normalizedUrl)
-                    .findOne();
+            Url url = UrlDao.getUrlByName(normalizedUrl);
             if (url != null) {
+                log.debug("Url with such name: %s ,already exists.".formatted(normalizedUrl));
                 ctx.sessionAttribute("flash",
                         "Страница уже существует. Используй urls/%d чтобы получить информацию о ней."
                                 .formatted(url.getId()));
                 ctx.sessionAttribute("flash-type", "info");
                 ctx.status(HttpStatus.FOUND);
                 ctx.redirect("/");
-                log.info("isUrlAlreadyExists out != null");
                 return true;
             }
-            log.info("isUrlAlreadyExists == null");
+            log.debug("Url with name: %s doesn't exists yet.".formatted(normalizedUrl));
             return false;
         }
 
         private static String getNormalizedUrl(URL url) {
-            log.info("getNormalizedUrl in");
             return String.format(
                     "%s://%s%s",
                     url.getProtocol(),
@@ -117,11 +110,9 @@ public class UrlController {
         }
 
         private static URL parseUrl(Context ctx, String urlInput) {
-            log.info("parseUrl in");
             try {
-                return new URL(urlInput);
-            } catch (MalformedURLException e) {
-                log.info("parseUrl catch");
+                return new URI(urlInput).toURL();
+            } catch (URISyntaxException | MalformedURLException e) {
                 ctx.sessionAttribute("flash", "Некорректный URL");
                 ctx.sessionAttribute("flash-type", "danger");
                 ctx.redirect("/");
@@ -132,20 +123,61 @@ public class UrlController {
 
     public static class SingleShowEndpoint {
         public static final Handler HANDLER = ctx -> {
-            log.info("SingleShowEndpoint in");
-            int id = ctx.pathParamAsClass("id", Integer.class).getOrDefault(null);
-
-            Url url = DB.getDefault()
-                    .find(Url.class, id);
-
+            Long id = ctx.pathParamAsClass("id", Long.class).getOrDefault(null);
+            log.debug("int id: %d.".formatted(id));
+            Url url = UrlDao.getUrlById(id);
+            log.debug("Url url: %s.".formatted(url));
             if (url == null) {
                 throw new NotFoundResponse();
             }
-
             ctx.attribute("url", url);
             ctx.render("single.html");
-            log.info("SingleShowEndpoint out");
         };
     }
 
+    public static class UrlChecksEndpoint {
+        public static final Handler HANDLER = ctx -> {
+            Long id = ctx.pathParamAsClass("id", Long.class).getOrDefault(null);
+            log.debug("int id: %d.".formatted(id));
+            Url url = UrlDao.getUrlById(id);
+            log.debug("Url url: %s.".formatted(url));
+            if (url == null) {
+                throw new NotFoundResponse();
+            }
+            parseUrl(ctx, url);
+
+            ctx.redirect("/urls/" + url.getId());
+        };
+
+        private static void parseUrl(Context ctx, Url url) {
+            try {
+                HttpResponse<String> response = Unirest.get(url.getName()).asString();
+                Document doc = Jsoup.parse(response.getBody());
+
+                createUrlCheck(url, response, doc);
+
+                ctx.sessionAttribute("flash", "Страница успешно проверена");
+                ctx.sessionAttribute("flash-type", "success");
+            } catch (UnirestException e) {
+                ctx.sessionAttribute("flash", "Некорректный адрес");
+                ctx.sessionAttribute("flash-type", "danger");
+            } catch (Exception e) {
+                ctx.sessionAttribute("flash", e.getMessage());
+                ctx.sessionAttribute("flash-type", "danger");
+            }
+        }
+
+        private static void createUrlCheck(Url url, HttpResponse<String> response, Document doc) {
+            Integer statusCode = response.getStatus();
+            String title = doc.title();
+            Element h1Element = doc.selectFirst("h1");
+            String h1 = h1Element == null ? "" : h1Element.text();
+            Element descriptionElement = doc.selectFirst("meta[name=description]");
+            String description = descriptionElement == null ? "" : descriptionElement.attr("content");
+
+            log.debug("Integer statusCode: %d, String title: %s, String h1: %s, String description: %s"
+                    .formatted(statusCode, title, h1, description));
+            UrlCheckDao.save(url, statusCode, title, h1, description);
+        }
+    }
 }
